add ribbon + zuul